# EPFL-ICG-Final-Project

2D_inverse_kinematics_demo/: CMakeLists.txt  InverseKinematics.kdev4  README.txt
2D_inverse_kinematics_demo/VS2010/InverseKinematics/: InverseKinematics.sln  InverseKinematics.vcxproj  InverseKinematics.vcxproj.filters
2D_inverse_kinematics_demo/src/: color.h  link.h  linkedstructure.cpp  linkedstructure.h  main.cpp
3D_inverse_kinematics_0/: .gitignore  CMakeLists.txt  Doxyfile.in  PrintVariables.cmake  README.md
3D_inverse_kinematics_0/armadillo-9.400.3/: README.md
3D_inverse_kinematics_0/lib/OpenBLAS-0.3.6/debug/lib/pkgconfig/: openblas.pc
3D_inverse_kinematics_0/lib/OpenBLAS-0.3.6/release/include/: openblas_config.h
3D_inverse_kinematics_0/lib/glew/: glew.vcxproj
3D_inverse_kinematics_0/src/: CMakeLists.txt  bezier.cpp  bone.h  cylinder.cpp  cylinder.h  earth.frag  earth.vert  gl_context.h  glfw_window.cpp  glmath.cpp  glmath.h  hinge.h  inv_kin_viewer.cpp  inv_kin_viewer.h  joint.h  kinematics.cpp  kinematics.h  main.cpp  math_util.h  object.h  path.h  phong.frag  phong.vert  planet.h  solar_viewer.cpp  solar_viewer.h  solid_color.frag  sphere.cpp  sphere.h  texture.cpp
3D_inverse_kinematics_0/src/mesh/: cylinder.cpp  cylinder.h  cylinder_mesh.cpp  cylinder_mesh.h  mesh.h  sphere.cpp  sphere.h  sphere_mesh.cpp  sphere_mesh.h
3D_inverse_kinematics_0/src/object/: axes.h  axial.h  ball.h  bone.h  hinge.h  light.h  object.h  viewer.h
3D_inverse_kinematics_0/textures/: spaceship.off
Documentation/: calcs.tns  classes.mdj
(+4 files in other folders)
